More tidy, test completed